Promote readability defaults to core and bridge baselines

--- a/arbercharts-core/src/main/resources/i18n/charts.properties
+++ b/arbercharts-core/src/main/resources/i18n/charts.properties
@@ -6,6 +6,26 @@ chart.path.i18n=i18n.charts
 # --- Rendering Defaults ---
 chart.render.fast=false
 chart.icon.scale=16.0
+Chart.axis.label.baseSize=11.5
+Chart.axis.label.fontScale=1.08
+Chart.crosshair.label.baseSize=11.5
+Chart.crosshair.label.fontScale=1.08
+Chart.crosshair.label.paddingH=8
+Chart.crosshair.label.paddingV=4
+Chart.crosshair.label.arc=8
+Chart.crosshair.marker.size=10
+Chart.legend.fontScale=1.06
+Chart.legend.padding=5
+Chart.legend.iconSize=7
+Chart.legend.dock.density=compact
+Chart.legend.dock.preferredWidth=244
+Chart.legend.dock.preferredHeight=140
+Chart.legend.dock.minWidth=188
+Chart.legend.dock.minHeight=112
+Chart.legend.dock.right.preferredWidth=258
+Chart.legend.dock.left.preferredWidth=244
+Chart.legend.dock.top.preferredHeight=126
+Chart.legend.dock.bottom.preferredHeight=126
 # --- I18N Fallback ---
 chart.i18n.fallback=en
 # Medical grid defaults (clinical standard)
